--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <nav>
-        <h1 style="color: #00adb5">New Year's Resolutions</h1>
+        <h1>New Year's Resolutions</h1>
         <div class="new-resolution-container">
           <h3>New Resolution</h3>
           <i
