--- a/index.html
+++ b/index.html
@@ -48,5 +48,23 @@
         </div>
       </div>
     </main>
+    <!-- MODAL! -->
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Add New Resolution</h2>
+        <input
+          type="text"
+          id="new-resolution"
+          placeholder="Type your resolution"
+        />
+        <input
+          type="text"
+          id="new-text-resolution"
+          placeholder="Text of your resolution"
+        />
+        <button id="meter-resolution">Add</button>
+      </div>
+    </div>
   </body>
 </html>
