Todo funcional me falta el buscador

--- a/index.html
+++ b/index.html
@@ -35,19 +35,7 @@
         </div>
       </nav>
     </header>
-    <main>
-      <div class="card">
-        <div class="card-title">Resolution #1</div>
-        <div class="card-text">
-          Revisar el diseño del todo list y hacer ajustes finales.
-        </div>
-        <div class="card-actions">
-          <button>Completar</button>
-          <button id="botonDos">Editar</button>
-          <button id="botonTres">Eliminar</button>
-        </div>
-      </div>
-    </main>
+    <main></main>
     <!-- MODAL! -->
     <div id="modal" class="modal">
       <div class="modal-content">
