--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         </div>
       </nav>
     </header>
+    <div class="container-tareas">
+      <h2 id="contador">Resolutions counter :</h2>
+    </div>
     <main></main>
     <!-- MODAL! -->
     <div id="modal" class="modal">
